# ChangeLog for www-apache/libapreq2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/libapreq2/ChangeLog,v 1.38 2009/09/05 08:49:49 tove Exp $

  05 Sep 2009; Torsten Veller <tove@gentoo.org> libapreq2-2.08-r2.ebuild,
  libapreq2-2.12.ebuild:
  Add INSTALLDIRS=vendor to install perl modules to vendor_perl (#283723)

*libapreq2-2.12 (27 Jun 2009)

  27 Jun 2009; Patrick Lauer <patrick@gentoo.org> +libapreq2-2.12.ebuild:
  Bump to 2.12, fixes #275390

  26 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  libapreq2-2.08-r2.ebuild:
  Add pkg_setup().

  18 Nov 2008; Torsten Veller <tove@gentoo.org> libapreq2-2.08-r2.ebuild:
  New virtuals: version

  22 Mar 2008; Benedikt Böhm <hollow@gentoo.org> -libapreq2-2.08.ebuild:
  get rid of old libapreq2 ebuild (finally)

  22 Mar 2008; Markus Meier <maekke@gentoo.org> libapreq2-2.08-r2.ebuild:
  amd64 stable, bug #205225

  31 Jan 2008; Benedikt Böhm <hollow@gentoo.org> libapreq2-2.08-r2.ebuild:
  fix depend.apache usage wrt #208033 (again)

  29 Jan 2008; Benedikt Böhm <hollow@gentoo.org> files/76_mod_apreq.conf,
  metadata.xml, libapreq2-2.08.ebuild:
  fix depend.apache usage wrt #208033; update metadata; cleanup

  27 Jan 2008; Benedikt Böhm <hollow@gentoo.org>
  -files/libapreq2-2.0-binloc.patch, -files/libapreq2-2.0-sandbox.patch,
  files/76_mod_apreq.conf, -libapreq2-2.07.ebuild,
  -libapreq2-2.07-r1.ebuild, -libapreq2-2.08-r1.ebuild:
  cleanup

  15 Jan 2008; Raúl Porcel <armin76@gentoo.org> libapreq2-2.08-r2.ebuild:
  alpha/sparc stable wrt #205225

  10 Jan 2008; Markus Meier <maekke@gentoo.org> libapreq2-2.08-r2.ebuild:
  x86 stable, bug #205225

  10 Jan 2008; Brent Baude <ranger@gentoo.org> libapreq2-2.08-r2.ebuild:
  Marking libapreq2-2.08-r2 ppc64 for bug 205225

  10 Jan 2008; Brent Baude <ranger@gentoo.org> libapreq2-2.08-r2.ebuild:
  Marking libapreq2-2.08-r2 ppc for bug 205225
