@@ -1,6 +1,11 @@
 # ChangeLog for www-apache/libapreq2
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/libapreq2/ChangeLog,v 1.38 2009/09/05 08:49:49 tove Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apache/libapreq2/ChangeLog,v 1.39 2011/05/24 08:46:40 pva Exp $
+
+*libapreq2-2.13 (24 May 2011)
+
+  24 May 2011; Peter Volkov <pva@gentoo.org> +libapreq2-2.13.ebuild:
+  Version bump.
 
   05 Sep 2009; Torsten Veller <tove@gentoo.org> libapreq2-2.08-r2.ebuild,
   libapreq2-2.12.ebuild:
